--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>초록 때리기 (클릭 시 5초 복귀 보장)</title>
+    <title>초록 때리기(제발 좀 되라)</title>
     <style>
         body {
             display: flex;
@@ -321,3 +321,4 @@
                 element.querySelectorAll(".digit-container").forEach(c => {
                     const oldDigit = c.querySelector(".digit-number.old");
                     const newDigit =
+
