--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             }
 
             // 클릭 발생 시 즉시 순위 갱신 (더 빠른 반영)
-            updateRankings();
+            //updateRankings();
         }
 
         catImage.addEventListener('mousedown', handlePop);
@@ -437,3 +437,4 @@
     </script>
 </body>
 </html>
+
