--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             user-select: none;
             position: relative;
         }
-
         .digit-container {
             position: relative;
             overflow: hidden;
@@ -31,7 +30,6 @@
             box-sizing: border-box;
             white-space: nowrap;
         }
-
         .digit-number {
             position: absolute;
             top: 0; left: 0;
@@ -43,7 +41,6 @@
             line-height: 1.2;
             white-space: nowrap;
         }
-
         .digit-number.new { transform: translateY(100%); }
         .digit-number.enter { transform: translateY(0); }
         .digit-number.exit { transform: translateY(-100%); }
@@ -78,24 +75,18 @@
             align-items: center;
             line-height: 1.2;
         }
-        #my-pops-display {
-            line-height: 1.2;
-        }
-
+        #my-pops-display { line-height: 1.2; }
         #popcat-image { width: 300px; height: auto; cursor: pointer; transition: transform 0.05s ease; }
         #popcat-image:active { transform: scale(0.98); }
-
         input, button {
             padding: 12px 20px; font-size: 1.1em; margin-top: 15px;
             border-radius: 8px; border: 1px solid #ccc; cursor: pointer;
         }
     </style>
-
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 </head>
 <body>
-
     <div id="ranking-section">
         <h3>전체 클릭 수</h3>
         <div id="total-pops-display">
@@ -123,9 +114,7 @@
     </div>
 
     <script>
-        // ----------------------------------------------------
-        // 1. Firebase 설정
-        // ----------------------------------------------------
+        // Firebase 설정
         const firebaseConfig = {
             apiKey: "AIzaSyA6OwwtJNtTqujb6PW6nolYmstOj7zBqCA",
             authDomain: "drawgreen-3bc38.firebaseapp.com",
@@ -137,9 +126,7 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
 
-        // ----------------------------------------------------
-        // 2. DOM 및 변수
-        // ----------------------------------------------------
+        // DOM 변수
         const catImage = document.getElementById('popcat-image');
         const myPopsDisplay = document.getElementById('my-pops-display');
         const totalPopsValue = document.getElementById('total-pops-value');
@@ -155,109 +142,39 @@
         const closedImage = '귀엽다.png';
         const openImage = '귀엽다2.png';
 
-        // 폴링 및 활동 감지 관련 변수
-        let rankingsInterval = null; // 랭킹 읽어오는 주기
-        const FAST_POLLING_INTERVAL = 5000; // 5초
-        const SLOW_POPOLLING_INTERVAL = 30000; // 30초
-        const FAST_POLLING_DURATION_COUNT = 4; // 5초 주기로 4번 더 업데이트 (총 20초)
+        // 폴링 관련
+        let rankingsInterval = null;
+        let fastPollingActive = false;
+        let fastPollingCounter = 0;
+        const FAST_POLLING_INTERVAL = 5000;
+        const SLOW_POPOLLING_INTERVAL = 30000;
+        const FAST_POLLING_DURATION_COUNT = 4;
 
-        let fastPollingActive = false; // 현재 빠른 폴링 모드인지 여부
-        let fastPollingCounter = 0; // 빠른 폴링 남은 횟수
+        // ----------------- 게임 시작 -----------------
+        startButton.addEventListener('click', startGame);
 
-        // ----------------------------------------------------
-        // 3. 게임 시작
-        // ----------------------------------------------------
         async function startGame() {
             const userId = userIdInput.value.trim();
-            if (userId) {
-                currentUserId = userId;
-                currentUserDisplay.textContent = currentUserId;
-                startScreen.style.display = 'none';
-                gameScreen.style.display = 'block';
-                await loadMyPopsInitial();
-                // 게임 시작 시에는 느린 폴링 모드 유지, 첫 클릭을 기다림.
-                // startPolling(SLOW_POPOLLING_INTERVAL); // 이미 DOMContentLoaded에서 시작됨
-            } else {
-                alert("ID를 입력해 주세요.");
-            }
+            if (!userId) return alert("ID를 입력해 주세요.");
+
+            currentUserId = userId;
+            currentUserDisplay.textContent = currentUserId;
+            startScreen.style.display = 'none';
+            gameScreen.style.display = 'block';
+            await loadMyPopsInitial();
         }
-        startButton.addEventListener('click', startGame);
 
         async function loadMyPopsInitial() {
             try {
                 const doc = await db.collection("users").doc(currentUserId).get();
                 localPops = doc.exists ? Number(doc.data().pops) || 0 : 0;
-                // 내 클릭 수는 애니메이션 없음, 직접 textContent 업데이트
                 myPopsDisplay.textContent = localPops;
             } catch (err) {
-                console.error(`내 클릭 수 로드 에러:`, err);
+                console.error("내 클릭 수 로드 에러:", err);
             }
         }
 
-        // ----------------------------------------------------
-        // 4. 폴링 제어 함수
-        // ----------------------------------------------------
-        function startPolling(interval) {
-            if (rankingsInterval) {
-                clearInterval(rankingsInterval);
-            }
-            rankingsInterval = setInterval(handlePollingTick, interval);
-            console.log(`Polling started with interval: ${interval / 1000}s`);
-        }
-
-        // 폴링 틱 핸들러
-        async function handlePollingTick() {
-            // 빠른 폴링 모드이고, 남은 횟수가 있으면 카운트 감소
-            if (fastPollingActive && fastPollingCounter > 0) {
-                fastPollingCounter--;
-                console.log(`Fast polling active. Remaining: ${fastPollingCounter}`);
-            } else if (fastPollingActive && fastPollingCounter <= 0) {
-                // 빠른 폴링 횟수 종료, 느린 폴링으로 전환
-                console.log("Fast polling finished. Switching to slow polling.");
-                fastPollingActive = false;
-                startPolling(SLOW_POPOLLING_INTERVAL);
-            }
-
-            // 실제 순위 업데이트 실행
-            await updateRankings();
-        }
-
-        // ----------------------------------------------------
-        // 5. 클릭 처리
-        // ----------------------------------------------------
-        async function handlePop() {
-            if (!currentUserId) return;
-
-            // 애니메이션
-            catImage.src = openImage;
-            setTimeout(() => { catImage.src = closedImage; }, 80);
-
-            // 로컬 카운트 증가 (내 클릭 수는 애니메이션 없음)
-            localPops++;
-            myPopsDisplay.textContent = localPops;
-
-            // Firestore 즉시 업데이트
-            const userRef = db.collection("users").doc(currentUserId);
-            try {
-                await userRef.set({
-                    pops: firebase.firestore.FieldValue.increment(1)
-                }, { merge: true });
-            } catch (error) {
-                console.error("클릭 업데이트 실패:", error);
-            }
-
-            // 첫 클릭이거나 빠른 폴링 모드가 아닐 때만 빠른 폴링 시작
-            if (!fastPollingActive) {
-                console.log("First click detected! Starting fast polling.");
-                fastPollingActive = true;
-                fastPollingCounter = FAST_POLLING_DURATION_COUNT; // 4번 더 실행
-                startPolling(FAST_POLLING_INTERVAL); // 5초 주기로 즉시 전환
-            }
-
-            // 클릭 발생 시 즉시 순위 갱신 (더 빠른 반영)
-            //updateRankings();
-        }
-
+        // ----------------- 클릭 처리 -----------------
         catImage.addEventListener('mousedown', handlePop);
         document.addEventListener('keydown', (e) => {
             if (e.code === 'Space' && !e.repeat && currentUserId) {
@@ -266,9 +183,48 @@
             }
         });
 
-        // ----------------------------------------------------
-        // 6. 숫자 애니메이션 (쉼표 없음)
-        // ----------------------------------------------------
+        async function handlePop() {
+            if (!currentUserId) return;
+
+            catImage.src = openImage;
+            setTimeout(() => catImage.src = closedImage, 80);
+
+            localPops++;
+            myPopsDisplay.textContent = localPops;
+
+            try {
+                await db.collection("users").doc(currentUserId).set({
+                    pops: firebase.firestore.FieldValue.increment(1)
+                }, { merge: true });
+            } catch (err) { console.error("클릭 업데이트 실패:", err); }
+
+            if (!fastPollingActive) {
+                startPolling(FAST_POLLING_INTERVAL, true, FAST_POLLING_DURATION_COUNT);
+            }
+        }
+
+        // ----------------- 폴링 제어 -----------------
+        function startPolling(interval, fastMode = false, fastCount = 0) {
+            if (rankingsInterval) clearInterval(rankingsInterval);
+
+            fastPollingActive = fastMode;
+            fastPollingCounter = fastCount;
+
+            rankingsInterval = setInterval(async () => {
+                await updateRankings();
+
+                if (fastPollingActive) {
+                    fastPollingCounter--;
+                    if (fastPollingCounter <= 0) {
+                        startPolling(SLOW_POPOLLING_INTERVAL, false);
+                    }
+                }
+            }, interval);
+
+            console.log(`Polling started: ${fastMode ? "FAST" : "SLOW"}, interval=${interval}ms`);
+        }
+
+        // ----------------- 숫자 애니메이션 -----------------
         function updateNumberSmooth(element, newValue) {
             const oldText = element.textContent.replace(/[^0-9]/g, '') || "0";
             const oldVal = Number(oldText);
@@ -282,34 +238,22 @@
             for (let i = 0; i < maxLen; i++) {
                 const oldChar = oldStr[oldStr.length - 1 - i] || " ";
                 const newChar = newStr[newStr.length - 1 - i] || " ";
-
                 if (oldChar === newChar) {
-                    html = `
-                        <span class="digit-container">
-                            <span class="digit-number">${newChar}</span>
-                        </span>` + html;
+                    html = `<span class="digit-container"><span class="digit-number">${newChar}</span></span>` + html;
                 } else {
-                    html = `
-                        <span class="digit-container">
-                            <span class="digit-number old">${oldChar}</span>
-                            <span class="digit-number new">${newChar}</span>
-                        </span>` + html;
+                    html = `<span class="digit-container"><span class="digit-number old">${oldChar}</span><span class="digit-number new">${newChar}</span></span>` + html;
                 }
             }
 
             element.innerHTML = html;
-            void element.offsetHeight; // Reflow 트리거
+            void element.offsetHeight; // reflow
 
             requestAnimationFrame(() => {
                 element.querySelectorAll(".digit-container").forEach(c => {
                     const oldDigit = c.querySelector(".digit-number.old");
                     const newDigit = c.querySelector(".digit-number.new");
-
                     if (oldDigit) oldDigit.classList.add("exit");
-                    if (newDigit) {
-                        newDigit.classList.remove("new");
-                        newDigit.classList.add("enter");
-                    }
+                    if (newDigit) { newDigit.classList.remove("new"); newDigit.classList.add("enter"); }
                 });
             });
 
@@ -323,19 +267,11 @@
             }, 400);
         }
 
-        // ----------------------------------------------------
-        // 7. 순위표 업데이트
-        // ----------------------------------------------------
+        // ----------------- 순위표 -----------------
         function updateRankList(ranks) {
-            if (ranks.length === 0) {
-                top10List.innerHTML = '<li>아직 데이터가 없습니다.</li>';
-                return;
-            }
-
+            if (!ranks.length) { top10List.innerHTML = '<li>아직 데이터가 없습니다.</li>'; return; }
             const currentRankIds = new Set(ranks.map(r => `rank-${r.id}`));
-            Array.from(top10List.children).forEach(li => {
-                if (!currentRankIds.has(li.id)) li.remove();
-            });
+            Array.from(top10List.children).forEach(li => { if (!currentRankIds.has(li.id)) li.remove(); });
 
             ranks.forEach((r, i) => {
                 const listId = `rank-${r.id}`;
@@ -344,97 +280,45 @@
                 let popSpanToUpdate = null;
 
                 if (!li) {
-                    li = document.createElement('li');
-                    li.id = listId;
-
-                    const rankIdSpan = document.createElement('span');
-                    rankIdSpan.className = 'rank-id';
-
-                    const popWrapper = document.createElement('span');
-                    popWrapper.className = 'rank-pops';
-
-                    const popSpan = document.createElement('span');
-                    popSpan.id = popSpanId;
-                    popSpan.textContent = r.pops; // 초기값 설정
-
-                    popWrapper.appendChild(popSpan);
-                    li.appendChild(rankIdSpan);
-                    li.appendChild(popWrapper);
-
+                    li = document.createElement('li'); li.id = listId;
+                    const rankIdSpan = document.createElement('span'); rankIdSpan.className = 'rank-id';
+                    const popWrapper = document.createElement('span'); popWrapper.className = 'rank-pops';
+                    const popSpan = document.createElement('span'); popSpan.id = popSpanId; popSpan.textContent = r.pops;
+                    popWrapper.appendChild(popSpan); li.appendChild(rankIdSpan); li.appendChild(popWrapper);
                     const existing = Array.from(top10List.children);
-                    if (i < existing.length) {
-                        top10List.insertBefore(li, existing[i]);
-                    } else {
-                        top10List.appendChild(li);
-                    }
-                } else {
-                    popSpanToUpdate = document.getElementById(popSpanId);
-                }
+                    if (i < existing.length) top10List.insertBefore(li, existing[i]); else top10List.appendChild(li);
+                } else { popSpanToUpdate = document.getElementById(popSpanId); }
 
                 li.querySelector('.rank-id').textContent = `${i + 1}. ${r.id}`;
-                if (popSpanToUpdate) {
-                    updateNumberSmooth(popSpanToUpdate, r.pops);
-                }
+                if (popSpanToUpdate) updateNumberSmooth(popSpanToUpdate, r.pops);
             });
         }
 
-        // ----------------------------------------------------
-        // 8. 순위 및 전체 클릭 수 업데이트 (애니메이션 포함)
-        // ----------------------------------------------------
-        async function updateRankings(initialLoad = false) { // initialLoad 플래그 추가
-            let totalPops = 0;
-            const ranks = [];
-
+        // ----------------- 순위 및 전체 클릭 수 -----------------
+        async function updateRankings(initialLoad = false) {
+            let totalPops = 0; const ranks = [];
             try {
-                const snapshot = await db.collection("users")
-                    .orderBy("pops", "desc")
-                    .limit(10)
-                    .get();
-
+                const snapshot = await db.collection("users").orderBy("pops", "desc").limit(10).get();
                 const totalSnapshot = await db.collection("users").get();
-                totalSnapshot.docs.forEach(doc => {
-                    totalPops += Number(doc.data().pops) || 0;
-                });
+                totalSnapshot.docs.forEach(doc => { totalPops += Number(doc.data().pops) || 0; });
 
-                // 초기 로드 시 0부터 애니메이션, 그 외에는 현재 값부터 애니메이션
-                if (initialLoad) {
-                    // 처음 로드할 때는 current value가 '로딩 중...' 이므로, 0부터 시작하도록 강제
-                    totalPopsValue.textContent = '0';
-                    updateNumberSmooth(totalPopsValue, totalPops);
-                } else {
-                    updateNumberSmooth(totalPopsValue, totalPops);
-                }
-                
-                // 순위표는 항상 현재 값부터 애니메이션
-                snapshot.docs.forEach(doc => {
-                    ranks.push({ id: doc.id, pops: Number(doc.data().pops) || 0 });
-                });
+                if (initialLoad) { totalPopsValue.textContent = '0'; updateNumberSmooth(totalPopsValue, totalPops); }
+                else updateNumberSmooth(totalPopsValue, totalPops);
+
+                snapshot.docs.forEach(doc => { ranks.push({ id: doc.id, pops: Number(doc.data().pops) || 0 }); });
                 updateRankList(ranks);
-
             } catch (err) {
                 console.error("Firestore 오류:", err);
-                // 오류 발생 시에도 0부터 애니메이션 (또는 현재 값부터)
-                if (initialLoad) {
-                    totalPopsValue.textContent = '0';
-                    updateNumberSmooth(totalPopsValue, 0);
-                } else {
-                    updateNumberSmooth(totalPopsValue, 0);
-                }
-                if (top10List.children.length === 0) {
-                    top10List.innerHTML = '<li>로딩 오류</li>';
-                }
+                if (initialLoad) { totalPopsValue.textContent = '0'; updateNumberSmooth(totalPopsValue, 0); }
+                else updateNumberSmooth(totalPopsValue, 0);
+                if (!top10List.children.length) top10List.innerHTML = '<li>로딩 오류</li>';
             }
         }
 
-        // ----------------------------------------------------
-        // 9. 초기 실행: 페이지 로드 시 바로 순위 업데이트 시작
-        // ----------------------------------------------------
         document.addEventListener('DOMContentLoaded', async () => {
-            // ID 입력 화면에서 랭킹을 가져올 때 애니메이션 적용
-            await updateRankings(true); // initialLoad 플래그를 true로 설정
-            startPolling(SLOW_POPOLLING_INTERVAL); // 30초 주기로 폴링 시작
+            await updateRankings(true);
+            startPolling(SLOW_POPOLLING_INTERVAL); // 느린 폴링 시작
         });
     </script>
 </body>
 </html>
-
