--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 
         // 폴링 관련
         let rankingsInterval = null;
-        let fastPollingActive = false;
+        let fastPollingActive = true;
         let fastPollingCounter = 0;
         const FAST_POLLING_INTERVAL = 5000;
-        const SLOW_POPOLLING_INTERVAL = 30000;
+        const SLOW_POPOLLING_INTERVAL = 7000;
         const FAST_POLLING_DURATION_COUNT = 4;
 
         // ----------------- 게임 시작 -----------------
@@ -322,4 +322,5 @@
     </script>
 </body>
 </html>
+
 
