--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>초록 때리기 (클릭 시 5초 복귀 보장)</title>
+    <title>초록 때리기 (진짜 이거까지만 하고 간다)</title>
     <style>
         body {
             display: flex;
@@ -322,5 +322,6 @@
     </script>
 </body>
 </html>
+
 
 
