--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -145,8 +144,8 @@
 
         // 폴링 관련
         let rankingsInterval = null;
-        // 항상 10초 대기로 고정
-        const POLLING_INTERVAL = 10000; // 10초
+        // 항상 8초 대기로 고정
+        const POLLING_INTERVAL = 8000; // 8초
 
         // ----------------- 게임 시작 -----------------
         startButton.addEventListener('click', startGame);
@@ -166,9 +165,11 @@
             try {
                 const doc = await db.collection("users").doc(currentUserId).get();
                 localPops = doc.exists ? Number(doc.data().pops) || 0 : 0;
-                myPopsDisplay.textContent = localPops;
+                // 초기 로드 시에도 애니메이션 함수 사용
+                updateNumberSmooth(myPopsDisplay, localPops);
             } catch (err) {
                 console.error("내 클릭 수 로드 에러:", err);
+                updateNumberSmooth(myPopsDisplay, 0); // 에러 발생 시 0으로 초기화
             }
         }
 
@@ -188,17 +189,14 @@
             setTimeout(() => catImage.src = closedImage, 80);
 
             localPops++;
-            myPopsDisplay.textContent = localPops;
+            // myPopsDisplay.textContent = localPops; // 직접 텍스트 업데이트 대신 애니메이션 함수 사용
+            updateNumberSmooth(myPopsDisplay, localPops);
 
             try {
                 await db.collection("users").doc(currentUserId).set({
                     pops: firebase.firestore.FieldValue.increment(1)
                 }, { merge: true });
             } catch (err) { console.error("클릭 업데이트 실패:", err); }
-
-            // 클릭 시 폴링 간격 변경 로직 제거. 항상 POLLING_INTERVAL 유지.
-            // 필요하다면, 클릭 후 즉시 랭킹 업데이트를 한 번 수행할 수 있습니다.
-            // updateRankings();
         }
 
         // ----------------- 폴링 제어 -----------------
@@ -214,9 +212,15 @@
 
         // ----------------- 숫자 애니메이션 -----------------
         function updateNumberSmooth(element, newValue) {
+            // 현재 엘리먼트의 순수 숫자 텍스트를 가져옴
             const oldText = element.textContent.replace(/[^0-9]/g, '') || "0";
             const oldVal = Number(oldText);
-            if (oldVal === newValue) return;
+            if (oldVal === newValue) {
+                // 이미 같은 값인 경우, 불필요한 DOM 조작을 피함
+                // 하지만 혹시 모를 HTML 잔재를 위해 텍스트만 업데이트
+                element.textContent = newValue.toString();
+                return;
+            }
 
             const oldStr = oldVal.toString();
             const newStr = newValue.toString();
@@ -245,21 +249,18 @@
                 });
             });
 
+            // 애니메이션 완료 후 최종 상태로 DOM 정리
             setTimeout(() => {
-                element.querySelectorAll(".digit-number.old.exit").forEach(e => e.remove());
-                element.querySelectorAll(".digit-number.enter").forEach(e => {
-                    e.classList.remove("enter");
-                    e.className = "digit-number";
-                    e.style.transform = "translateY(0)";
-                });
-            }, 400);
+                // 모든 애니메이션 요소 제거 후 최종 값으로 깔끔하게 설정
+                element.textContent = newValue.toString();
+            }, 400); // CSS transition duration과 일치
         }
 
         // ----------------- 순위표 -----------------
         function updateRankList(ranks) {
             if (!ranks.length) { top10List.innerHTML = '<li>아직 데이터가 없습니다.</li>'; return; }
-            const currentRankIds = new Set(ranks.map(r => `rank-${r.id}`));
-            Array.from(top10List.children).forEach(li => { if (!currentRankIds.has(li.id)) li.remove(); });
+            // 현재 리스트 아이템의 ID들을 Set으로 저장하여 효율적으로 비교
+            const currentRankIds = new Set(Array.from(top10List.children).map(li => li.id));
 
             ranks.forEach((r, i) => {
                 const listId = `rank-${r.id}`;
@@ -268,19 +269,50 @@
                 let popSpanToUpdate = null;
 
                 if (!li) {
-                    li = document.createElement('li'); li.id = listId;
-                    const rankIdSpan = document.createElement('span'); rankIdSpan.className = 'rank-id';
-                    const popWrapper = document.createElement('span'); popWrapper.className = 'rank-pops';
-                    const popSpan = document.createElement('span'); popSpan.id = popSpanId; popSpan.textContent = r.pops;
-                    popWrapper.appendChild(popSpan); li.appendChild(rankIdSpan); li.appendChild(popWrapper);
-                    const existing = Array.from(top10List.children);
-                    if (i < existing.length) top10List.insertBefore(li, existing[i]); else top10List.appendChild(li);
-                } else { popSpanToUpdate = document.getElementById(popSpanId); }
+                    // 새로운 랭크 아이템 생성
+                    li = document.createElement('li');
+                    li.id = listId;
+                    const rankIdSpan = document.createElement('span');
+                    rankIdSpan.className = 'rank-id';
+                    const popWrapper = document.createElement('span');
+                    popWrapper.className = 'rank-pops';
+                    const popSpan = document.createElement('span');
+                    popSpan.id = popSpanId;
+                    // 초기 텍스트 설정. 애니메이션이 적용되기 전.
+                    popSpan.textContent = r.pops;
+                    popWrapper.appendChild(popSpan);
+                    li.appendChild(rankIdSpan);
+                    li.appendChild(popWrapper);
 
+                    // 올바른 위치에 삽입
+                    const existing = Array.from(top10List.children);
+                    if (i < existing.length) {
+                        top10List.insertBefore(li, existing[i]);
+                    } else {
+                        top10List.appendChild(li);
+                    }
+                } else {
+                    // 기존 아이템 업데이트
+                    popSpanToUpdate = document.getElementById(popSpanId);
+                }
+
+                // 텍스트 업데이트
                 li.querySelector('.rank-id').textContent = `${i + 1}. ${r.id}`;
-                if (popSpanToUpdate) updateNumberSmooth(popSpanToUpdate, r.pops);
+                // 팝 수 애니메이션 업데이트 (혹시 업데이트 대상이 없어도 안전하게)
+                if (popSpanToUpdate) {
+                    updateNumberSmooth(popSpanToUpdate, r.pops);
+                }
+                // 처리된 ID는 Set에서 제거
+                currentRankIds.delete(listId);
+            });
+
+            // Set에 남아있는 ID는 더 이상 순위권에 없는 아이템이므로 제거
+            currentRankIds.forEach(idToRemove => {
+                const liToRemove = document.getElementById(idToRemove);
+                if (liToRemove) liToRemove.remove();
             });
         }
+
 
         // ----------------- 순위 및 전체 클릭 수 -----------------
         async function updateRankings(initialLoad = false) {
@@ -290,15 +322,24 @@
                 const totalSnapshot = await db.collection("users").get();
                 totalSnapshot.docs.forEach(doc => { totalPops += Number(doc.data().pops) || 0; });
 
-                if (initialLoad) { totalPopsValue.textContent = '0'; updateNumberSmooth(totalPopsValue, totalPops); }
-                else updateNumberSmooth(totalPopsValue, totalPops);
+                if (initialLoad) {
+                    // 초기 로드 시에는 애니메이션 없이 0에서 시작하여 목표 값으로 애니메이션
+                    totalPopsValue.textContent = '0';
+                    updateNumberSmooth(totalPopsValue, totalPops);
+                } else {
+                    updateNumberSmooth(totalPopsValue, totalPops);
+                }
 
                 snapshot.docs.forEach(doc => { ranks.push({ id: doc.id, pops: Number(doc.data().pops) || 0 }); });
                 updateRankList(ranks);
             } catch (err) {
                 console.error("Firestore 오류:", err);
-                if (initialLoad) { totalPopsValue.textContent = '0'; updateNumberSmooth(totalPopsValue, 0); }
-                else updateNumberSmooth(totalPopsValue, 0);
+                if (initialLoad) {
+                    totalPopsValue.textContent = '0';
+                    updateNumberSmooth(totalPopsValue, 0);
+                } else {
+                    updateNumberSmooth(totalPopsValue, 0);
+                }
                 if (!top10List.children.length) top10List.innerHTML = '<li>로딩 오류</li>';
             }
         }
@@ -310,6 +351,3 @@
     </script>
 </body>
 </html>
-
-
-
