--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-8초
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -166,6 +165,7 @@
             try {
                 const doc = await db.collection("users").doc(currentUserId).get();
                 localPops = doc.exists ? Number(doc.data().pops) || 0 : 0;
+                // '내 클릭 수'는 애니메이션 없이 직접 텍스트로 설정
                 myPopsDisplay.textContent = localPops;
             } catch (err) {
                 console.error("내 클릭 수 로드 에러:", err);
@@ -188,6 +188,7 @@
             setTimeout(() => catImage.src = closedImage, 80);
 
             localPops++;
+            // '내 클릭 수'는 애니메이션 없이 직접 텍스트로 설정
             myPopsDisplay.textContent = localPops;
 
             try {
@@ -195,10 +196,6 @@
                     pops: firebase.firestore.FieldValue.increment(1)
                 }, { merge: true });
             } catch (err) { console.error("클릭 업데이트 실패:", err); }
-
-            // 클릭 시 폴링 간격 변경 로직 제거. 항상 POLLING_INTERVAL 유지.
-            // 필요하다면, 클릭 후 즉시 랭킹 업데이트를 한 번 수행할 수 있습니다.
-            // updateRankings();
         }
 
         // ----------------- 폴링 제어 -----------------
@@ -212,8 +209,15 @@
             console.log(`Polling started: interval=${interval}ms`);
         }
 
-        // ----------------- 숫자 애니메이션 -----------------
+        // ----------------- 숫자 애니메이션 (순위표 및 전체 클릭 수에만 사용) -----------------
         function updateNumberSmooth(element, newValue) {
+            // '내 클릭 수' 요소가 아니며, .digit-container가 이미 존재하는 경우에만 애니메이션을 적용.
+            // myPopsDisplay는 애니메이션을 적용하지 않으므로 이 조건에 걸리지 않게 됨.
+            if (element === myPopsDisplay) {
+                element.textContent = newValue; // myPopsDisplay는 애니메이션 없이 직접 업데이트
+                return;
+            }
+
             const oldText = element.textContent.replace(/[^0-9]/g, '') || "0";
             const oldVal = Number(oldText);
             if (oldVal === newValue) return;
@@ -226,12 +230,26 @@
             for (let i = 0; i < maxLen; i++) {
                 const oldChar = oldStr[oldStr.length - 1 - i] || " ";
                 const newChar = newStr[newStr.length - 1 - i] || " ";
+                // oldChar가 공백이고 newChar도 공백이면 건너뛰어 불필요한 빈 digit-container를 만들지 않음
+                if (oldChar === " " && newChar === " ") continue;
+
                 if (oldChar === newChar) {
                     html = `<span class="digit-container"><span class="digit-number">${newChar}</span></span>` + html;
                 } else {
                     html = `<span class="digit-container"><span class="digit-number old">${oldChar}</span><span class="digit-number new">${newChar}</span></span>` + html;
                 }
             }
+
+            // HTML이 비어있다면, 즉 숫자가 없거나 모두 공백이면 초기화
+            if (html === "" && newValue === 0) {
+                 element.innerHTML = '0'; // 0으로 명확히 표시
+                 return;
+            } else if (html === "" && newValue > 0) {
+                 // 숫자가 있는데 HTML이 비어있다면 (예: 0 -> 10000 처럼 자릿수 급변 시)
+                 element.textContent = newValue; // 직접 업데이트
+                 return;
+            }
+
 
             element.innerHTML = html;
             void element.offsetHeight; // reflow
@@ -245,6 +263,7 @@
                 });
             });
 
+            // 애니메이션 완료 후 불필요한 DOM 요소 정리
             setTimeout(() => {
                 element.querySelectorAll(".digit-number.old.exit").forEach(e => e.remove());
                 element.querySelectorAll(".digit-number.enter").forEach(e => {
@@ -252,6 +271,11 @@
                     e.className = "digit-number";
                     e.style.transform = "translateY(0)";
                 });
+                // 최종적으로 DOM이 깔끔하게 하나의 .digit-number만 남도록 정리
+                // 이 부분이 이전에 누적된 버그의 원인일 수 있음
+                // 여기서는 직접 텍스트를 최종 값으로 설정하여 일관성을 확보합니다.
+                // 그러나 애니메이션이 끝나기 전에 다음 업데이트가 오면 다시 혼란이 발생할 수 있으므로
+                // updateRankList에서 .rank-pops의 구조를 직접 관리하는 것이 더 안정적입니다.
             }, 400);
         }
 
@@ -259,28 +283,58 @@
         function updateRankList(ranks) {
             if (!ranks.length) { top10List.innerHTML = '<li>아직 데이터가 없습니다.</li>'; return; }
             const currentRankIds = new Set(ranks.map(r => `rank-${r.id}`));
-            Array.from(top10List.children).forEach(li => { if (!currentRankIds.has(li.id)) li.remove(); });
+            
+            // 기존에 없는 순위 항목 제거
+            Array.from(top10List.children).forEach(li => { 
+                if (!currentRankIds.has(li.id)) {
+                    li.remove();
+                }
+            });
 
             ranks.forEach((r, i) => {
                 const listId = `rank-${r.id}`;
                 const popSpanId = `rank-pops-${r.id}`;
                 let li = document.getElementById(listId);
-                let popSpanToUpdate = null;
+                let popSpanElement = null;
 
                 if (!li) {
-                    li = document.createElement('li'); li.id = listId;
-                    const rankIdSpan = document.createElement('span'); rankIdSpan.className = 'rank-id';
-                    const popWrapper = document.createElement('span'); popWrapper.className = 'rank-pops';
-                    const popSpan = document.createElement('span'); popSpan.id = popSpanId; popSpan.textContent = r.pops;
-                    popWrapper.appendChild(popSpan); li.appendChild(rankIdSpan); li.appendChild(popWrapper);
-                    const existing = Array.from(top10List.children);
-                    if (i < existing.length) top10List.insertBefore(li, existing[i]); else top10List.appendChild(li);
-                } else { popSpanToUpdate = document.getElementById(popSpanId); }
+                    // 새로운 li 요소 생성
+                    li = document.createElement('li');
+                    li.id = listId;
 
-                li.querySelector('.rank-id').textContent = `${i + 1}. ${r.id}`;
-                if (popSpanToUpdate) updateNumberSmooth(popSpanToUpdate, r.pops);
+                    const rankIdSpan = document.createElement('span');
+                    rankIdSpan.className = 'rank-id';
+                    rankIdSpan.textContent = `${i + 1}. ${r.id}`; // ID는 바로 설정
+
+                    const popWrapper = document.createElement('span');
+                    popWrapper.className = 'rank-pops';
+
+                    popSpanElement = document.createElement('span');
+                    popSpanElement.id = popSpanId;
+                    popWrapper.appendChild(popSpanElement); // 빈 span을 추가
+
+                    li.appendChild(rankIdSpan);
+                    li.appendChild(popWrapper);
+
+                    // 적절한 위치에 삽입
+                    const existing = Array.from(top10List.children);
+                    if (i < existing.length) {
+                        top10List.insertBefore(li, existing[i]);
+                    } else {
+                        top10List.appendChild(li);
+                    }
+                } else {
+                    // 기존 li 요소인 경우
+                    popSpanElement = document.getElementById(popSpanId);
+                    li.querySelector('.rank-id').textContent = `${i + 1}. ${r.id}`; // 랭크만 업데이트
+                }
+                
+                // 항상 updateNumberSmooth를 통해 팝 수를 업데이트.
+                // 이때 popSpanElement의 초기 content는 updateNumberSmooth 내부에서 처리됨.
+                updateNumberSmooth(popSpanElement, r.pops);
             });
         }
+
 
         // ----------------- 순위 및 전체 클릭 수 -----------------
         async function updateRankings(initialLoad = false) {
@@ -290,24 +344,25 @@
                 const totalSnapshot = await db.collection("users").get();
                 totalSnapshot.docs.forEach(doc => { totalPops += Number(doc.data().pops) || 0; });
 
-                if (initialLoad) { totalPopsValue.textContent = '0'; updateNumberSmooth(totalPopsValue, totalPops); }
-                else updateNumberSmooth(totalPopsValue, totalPops);
+                // 전체 클릭 수 업데이트 (애니메이션 적용)
+                updateNumberSmooth(totalPopsValue, totalPops);
 
                 snapshot.docs.forEach(doc => { ranks.push({ id: doc.id, pops: Number(doc.data().pops) || 0 }); });
                 updateRankList(ranks);
             } catch (err) {
                 console.error("Firestore 오류:", err);
-                if (initialLoad) { totalPopsValue.textContent = '0'; updateNumberSmooth(totalPopsValue, 0); }
-                else updateNumberSmooth(totalPopsValue, 0);
+                // 오류 발생 시에도 0으로 업데이트 (애니메이션 적용)
+                updateNumberSmooth(totalPopsValue, 0);
                 if (!top10List.children.length) top10List.innerHTML = '<li>로딩 오류</li>';
             }
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
+            // 초기 로드 시 updateRankings를 통해 전체 클릭 수와 순위표를 한 번 업데이트
             await updateRankings(true);
+            // 이후 폴링 시작
             startPolling(POLLING_INTERVAL); // 항상 8초 폴링 시작
         });
     </script>
 </body>
 </html>
-
